src/main/webapp/resources/styles.css
*
{
	margin: 0;
	padding: 0;
}

ul
{
	list-style:none;
}

body
{
	font:11px "Lucida Grande",Verdana,Arial,"Bitstream Vera Sans",sans-serif;
	background: #f9f9f9;
	/*background: url("images/bg.jpg");*/
}

hr
{
	margin: 2em 0;
}

img
{
	border: none;
}

.error
{
	background: #ffebe8;
	border: 1px solid #cc0000;
	-moz-border-radius:5px;
	-khtml-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	padding: 1.2em;
	color: #333;
	margin-top: 1em;
	text-align: center;
}

.aError
{
	background: #ffebe8;
	border: 1px solid #cc0000;
	-moz-border-radius:5px;
	-khtml-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	padding: 1px 5px;
	color: #333;
	position: absolute;
	margin-left: 1em;
	text-align: center;
}

.regError
{
	background: #ffebe8;
	border: 1px solid #cc0000;
	-moz-border-radius:5px;
	-khtml-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	padding: .8em;
	color: #333;
	position: absolute;
	left:63%;
}

.bidError
{
	background: #ffebe8;
	border: 1px solid #cc0000;
	-moz-border-radius:5px;
	-khtml-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	padding: .8em;
	color: #333;
	position: absolute;
	left:47%;
}

#wrapper
{
	width: 800px;
	margin: 2em auto;
}

.clear
{
	clear: both;
}

label#username, label#password, label#firstName, label#middleName, label#lastName, label#address1, label#address2, label#city, label#state, label#country, label#zipcode, label#phoneNumber, label#zipcode, label#email
{
	color:#777;
	font-size:13px;
}

#login-form-container, #register-form-container
{	
	margin: 100px auto 100px;
	width: 325px;
}

#login-form-container a, #register-form-container a
{
	margin-left: 15px;
	color: #2175c0;
}

#login-form-container a:hover, #register-form-container a:hover
{
	color: red;
}

#login-form, #upi
{
	border: 1px solid #000;
	-moz-border-radius:11px;
	-khtml-border-radius:11px;
	-webkit-border-radius:11px;
	border-radius:11px;
	background:#fff;
	border:1px solid #e5e5e5;
	-moz-box-shadow:rgba(200,200,200,1) 0 4px 18px;
	-webkit-box-shadow:rgba(200,200,200,1) 0 4px 18px;
	-khtml-box-shadow:rgba(200,200,200,1) 0 4px 18px;
	box-shadow:rgba(200,200,200,1) 0 4px 18px;
	padding:16px 16px 20px;
	margin: 2em 0;
}

#upi
{
	padding-bottom: 40px !important;
}

#login-form input[type~=text], #login-form input[type~=password], #upi input[type~=text], #upi input[type~=password]
{
	color: #555;
}

#remember-me
{
	font-weight:400;
	float:left;
	margin-bottom:0;
}

#remember-me[type~=checkbox]
{
	width: 1em;
	margin-right: 0 !important;
}

#remember-me-label
{
	color:#777;
	font-size:11px;
	line-height:19px;
}

#login-msg
{
	background: #e8e8ff;
	padding: 10px;
	border: 1px solid blue;
	-moz-border-radius:5px;
	-khtml-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	text-align: center;
	margin: 1em 0;
}

#login-msg a
{
	color: blue;
}

#login-msg a:hover
{
	color: red;
}

#login-form input, #upi input
{	
	font-size:24px;
	width:97%;
	margin-top:2px;
	margin-right:6px;
	margin-bottom:16px;
	border:1px solid #e5e5e5;
	background:#fbfbfb;
	padding:3px;
}

#upi input[type~=text], #upi input[type~=password]
{
	background: #ffffe0 !important;	
}

input#submit
{
	font-family:"Lucida Grande",Verdana,Arial,"Bitstream Vera Sans",sans-serif;
	font-size:12px !important;
	font-weight: 800 !important;
	-moz-border-radius:11px;
	-khtml-border-radius:11px;
	-webkit-border-radius:11px;
	border-radius:11px;
	cursor:pointer;
	text-decoration:none;
	margin-top:-3px;
	padding:3px 10px;
	width: 100px !important;
	text-align: center;
	float: right;
	background-image: -webkit-gradient(linear, left top, left bottom, from(#298cba), to(#217096));
	background-image: -moz-linear-gradient(-90deg,#298cba,#217096);
	background-color: #2680ab;
	color: #fff;
	border: 1px solid #298cba;
}

input#submitAuction
{
	font-family:"Lucida Grande",Verdana,Arial,"Bitstream Vera Sans",sans-serif;
	font-size:12px !important;
	font-weight: 800 !important;
	-moz-border-radius:11px;
	-khtml-border-radius:11px;
	-webkit-border-radius:11px;
	border-radius:11px;
	cursor:pointer;
	text-decoration:none;
	margin-top:-3px;
	padding:3px 10px;
	width: 100px !important;
	text-align: center;
	background-image: -webkit-gradient(linear, left top, left bottom, from(#298cba), to(#217096));
	background-image: -moz-linear-gradient(-90deg,#298cba,#217096);
	background-color: #2680ab;
	color: #fff;
	border: 1px solid #298cba;
}

input#submit:hover, input#submitAuction:hover
{
	border: 1px solid #13455b;
}

input#submit:active, input#submitAuction:active
{
	background-image: -webkit-gradient(linear, left top, left bottom, from(#217096), to(#298cba));
	background-image: -moz-linear-gradient(-90deg,#217096,#298cba);
	background-color: #217096;
}

#register-success
{
	width: 550px;
	margin: 10em auto;
	border: 2px solid #3a5f0b;
	text-align: center;
	-moz-border-radius:11px;
	-khtml-border-radius:11px;
	-webkit-border-radius:11px;
	border-radius:11px;
	padding: 1em;
	color: #3a5f0b;
	background: #ccffbb;
}

#confirm-text
{
	height: 50px;
	font-size: 14pt;
	margin-left: 60px;
}

#confirm-text a
{
	color: #2088b2;
}

#confirm
{
	background: url("images/check.png") no-repeat;
	height: 50px;
	width: 50px;
	float: left;
}

#auctionImage
{
	float: left;
	border: 1px solid #000;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	-khtml-border-radius:10px;
	border-radius: 10px;
	padding: 5px;
	width: 105px;
	height: 105px;
}

#aImage img
{
	max-width: 100px;
	max-height: 100px;
	display: block;
	margin: auto;
}

#auctionDetails
{
	float: right;
	text-align: left;
	width: 650px;
}

#auctionDetails p
{
	line-height: 1.5em;
	font-weight: 800;
	font-size: 11pt;
	margin-bottom: 1em;
}

#auctionDetails label
{
	font-weight: 400 !important;
	font-size: 9pt !important;
}

#aTitle a, #control-panel a
{
	color: blue;
	text-decoration: none;
}

#aTitle a:hover, #control-panel a:hover
{
	color: #000;
	text-decoration: underline;
	background:#f1cc91;
}

#mainPage-auctions
{
	width: 800px;
	margin: 0 auto;
}

#header-img
{
	float: left;
	width: 300px;
}
#header-login
{
	float: right;
	width: 298px;
	height: 85px;
	text-align: right;
}

#header-login p
{
	margin-bottom: 1.3em;
	font-size: 10pt;
	font-style: italic;
}

#header-login a
{
	font-size: 9pt;
	text-decoration: none;
	border: 1px solid #000;
	-moz-border-radius:5px;
	-webkit-border-radius:5px;
	border-radius:5px;
	background: #333;
	color: #fff;
	padding: 5px;
}

#header-login a:hover
{
	background:#4a4afd;
	text-decoration:underline;
	border: 1px solid #000;
}

#nav-bar
{
	margin: 0 auto;
	display: table;
}

#nav
{
	float:left;
	font-weight:bold;
}

#nav li
{
	float:left;
	margin-right:1em;
	position:relative;
}

#nav li a
{
	display:block;
	padding:5px;
	color:#fff;
	background:#333;
	text-decoration:none;
	text-shadow:1px 1px 1px rgba(0,0,0,0.9); /* Text shadow to lift it a little */
}

#nav li a:hover
{
	color:#fff;
	background:#4a4afd;
	background:rgba(74,74,253,0.9); /* It'll look nice semi-transparent */
	text-decoration:underline;
}

/*--- DROPDOWN ---*/
#nav ul
{
	list-style:none;
	position:absolute;
	left:-9999px; /* Hide off-screen when not needed (this is more accessible than display:none;) */
	opacity:0; /* Set initial state to transparent */
	-webkit-transition:0.25s linear opacity; /* Make the dropdown fade-in in Webkit */
	z-index: 2;
}

#nav ul li
{
	padding-top:1px; /* Introducing a padding between the li and the a give the illusion spaced items */
	float:none;
}

#nav ul a
{
	white-space:nowrap; /* Stop text wrapping and creating multi-line dropdown items */
	display:block;
}

#nav li:hover ul
{ /* Display the dropdown on hover */
	left:0; /* Bring back on-screen when needed */
	opacity:1; /* Fade to opaque */
}

#nav li:hover a
{ /* Set styles for top level when dropdown is hovered */
	background:#4a4afd;
	background:rgba(74,74,253,0.9); /* It'll look nice semi-transparent */
	text-decoration:underline;
}

#nav li:hover ul a
{ /* Override some top level styles when dropdown is hovered */
	text-decoration:none;
	-webkit-transition:-webkit-transform 0.075s linear;
}

#nav li:hover ul li a:hover
{ /* Set styles for dropdown when items are hovered */
	background:#333;
	background:rgba(51,51,51,0.9); /* It'll look nice semi-transparent */
	text-decoration:underline;
	-moz-transform:scale(1.05);
	-webkit-transform:scale(1.05);
}

label#amount
{
	width: 250px;
	float: left;
	font-weight: 800 !important;
	font-size: 11pt !important;
}

#bid-history th
{
	font-size: 10pt;
	text-align: center;
	padding: 3px 5px;
}

#bid-history td
{
	padding: 5px;
}

#bid-history tr:nth-child(2n+1), #control-panel tr:nth-child(2n+1)
{
	background: #d0dafd;
}

#bid-history table, #control-panel table
{
	border: 1px solid #f9f9f9;
	border-collapse: collapse;
}

#add-auction p
{
	margin-bottom: 1em;
	line-height: 1.8em;
}

#control-panel img
{
	max-width: 100px;
	max-height: 100px;
}

.bidTitle, .bidCategory, .bidSeller, .saleTitle, .saleCategory
{
	text-align: center;
}

#control-panel table
{
	border: 1px solid #aaa;
	width: 800px;
}

#control-panel td
{
	padding: 10px;
}

#control-panel h3
{
	text-align: center;
	text-decoration: underline;
	margin-bottom: 1em;
}

#control-panel th
{
	background-image: -webkit-gradient(linear, left top, left bottom, from(#217096), to(#298cba));
	background-image: -moz-linear-gradient(-90deg,#217096,#298cba);
	background-color: #217096;
	color: #fff;
	padding: .5em 0;
	font-size: 10pt;
}

#control-panel td, #control-panel th
{	
	border-width: 0;
}

